(PruningTool) シリアルポート接続/切断・送信処理を実装 #13

--- a/PRG/Tools/PruningTool/PruningTool/PruningTool.csproj
+++ b/PRG/Tools/PruningTool/PruningTool/PruningTool.csproj
@@ -54,6 +54,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PruningLibrary\PruningLibrary.cs" />
     <EmbeddedResource Include="Form.resx">
       <DependentUpon>Form.cs</DependentUpon>
     </EmbeddedResource>
