(Sprinkler) ユニットテストのベースを作成 #34

--- a/PRG/Tools/Sprinkler/Sprinkler/Sprinkler.csproj
+++ b/PRG/Tools/Sprinkler/Sprinkler/Sprinkler.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Test\**" />
+    <EmbeddedResource Remove="Test\**" />
+    <None Remove="Test\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.IO.Ports" Version="5.0.0" />
   </ItemGroup>
 
