--- a/PRG/Tools/Sprinkler/Sprinkler/Sprinkler.csproj
+++ b/PRG/Tools/Sprinkler/Sprinkler/Sprinkler.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InputConverter.cs" />
     <Compile Include="Form.cs">
       <SubType>Form</SubType>
     </Compile>
