--- a/PRG/Tools/PatternEditor/PatternEditorTest/PatternEditorTest.csproj
+++ b/PRG/Tools/PatternEditor/PatternEditorTest/PatternEditorTest.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PatternEditor\PatternEditor.csproj">
+      <Project>{d2fd33e5-9e76-47aa-ba32-c8f0f7028bb6}</Project>
+      <Name>PatternEditor</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
