--- a/PRG/Tools/PatternConverter/PatternConverterTest/PatternConverterTest.csproj
+++ b/PRG/Tools/PatternConverter/PatternConverterTest/PatternConverterTest.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{B266E289-0914-4D34-BD7F-736F6088793B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PatternEditorTest</RootNamespace>
-    <AssemblyName>PatternEditorTest</AssemblyName>
+    <RootNamespace>PatternConverterTest</RootNamespace>
+    <AssemblyName>PatternConverterTest</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -56,9 +56,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PatternEditor\PatternEditor.csproj">
+    <ProjectReference Include="..\PatternConverter\PatternConverter.csproj">
       <Project>{d2fd33e5-9e76-47aa-ba32-c8f0f7028bb6}</Project>
-      <Name>PatternEditor</Name>
+      <Name>PatternConverter</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
