(Sprinkler) PatternConverter 出力結果の組み込み #45

--- a/PRG/Tools/Sprinkler/Sprinkler/Sprinkler.csproj
+++ b/PRG/Tools/Sprinkler/Sprinkler/Sprinkler.csproj
@@ -61,6 +61,7 @@
     </Compile>
     <Compile Include="Garden.cs" />
     <Compile Include="GardenScripter.cs" />
+    <Compile Include="PatternConstants.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form.resx">
