(Pump) PumpScript のベースを作成 #49

--- a/PRG/M5Stack/PumpTest/Makefile
+++ b/PRG/M5Stack/PumpTest/Makefile
@@ -1,7 +1,8 @@
 TARGET = PumpTest.exe
+SRC = ../Pump/PumpUtil.cpp ../Pump/PumpScript.cpp PumpTest.cpp
 
 all:
-	g++ PumpTest.cpp ../Pump/PumpUtil.cpp -lgtest -lpthread -o $(TARGET)
-	
+	g++ $(SRC) -lgtest -lpthread -o $(TARGET)
+
 run:
 	./PumpTest.exe
