--- a/PRG/M5Stack/PumpTest/Makefile
+++ b/PRG/M5Stack/PumpTest/Makefile
@@ -1,8 +1,9 @@
 TARGET = PumpTest.exe
 SRC = ../Pump/PumpUtil.cpp ../Pump/PumpScript.cpp PumpTest.cpp
+DEF = -DBUILD_CONFIG_PC
 
 all:
-	g++ $(SRC) -lgtest -lpthread -o $(TARGET)
+	g++ $(SRC) $(DEF) -lgtest -lpthread -o $(TARGET)
 
 run:
 	./PumpTest.exe
