(Sprinkler) 草パターンに爆発/爆縮を追加 #58

--- a/PRG/Tools/PatternConverter/Resources/Grass.yml
+++ b/PRG/Tools/PatternConverter/Resources/Grass.yml
@@ -220,6 +220,24 @@
   - '11000000011'
   - '00000000000'
 
+- Name: Explosion
+  Data:
+  - '00000100000'
+  - '10011111001'
+  - '11111111111'
+  - '11111011111'
+  - '01100000110'
+  - '00000000000'
+
+- Name: Implosion
+  Data:
+  - '01100000110'
+  - '11111011111'
+  - '11111111111'
+  - '10011111001'
+  - '00000100000'
+  - '00000000000'
+
 # -- ブロックの移動 --
 # ちょっと大味な演出になってしまうが
 # ゆっくり速度 + 輝度変化 を合わせれば活かせるかも
